There's a bug in the program where low composite numbers are not being factored correctly.

--- a/OptimumPrime/Makefile
+++ b/OptimumPrime/Makefile
@@ -13,7 +13,7 @@ vpath %.h include
 CC = gcc
 CFLAGS = -std=c11 -Wall -Wextra -pedantic -O3 -mtune=intel -march=skylake -mavx2
 
-PROGRAM = prime
+PROGRAM = factor
 
 all: $(PROGRAM)
 
